remove -XX:MaxPermSize parameter - not supported anymore with Java 8